Story 0045: document the bridge service and the live app-side run
build-environment.md gains the `bridge` compose service (image layering,
XMAGE_UPSTREAM pinning, the published :8080 socket, the --add-opens set that
must stay in sync with the server image and the :bridge test task) and the
host-side command for the BRIDGE_URL-gated :core:network tests. docker/README
mirrors it.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>